# flirtex

./: .dockerignore  .gitignore  .space.kts  README.md  docker-compose.yml  pyproject.toml
api/: .coveragerc  .dockerignore  .gitignore  :w  README.md  conftest.py  docker-entrypoint.sh  id_rsa  prod_backup.sql  pyproject.toml  pyrightconfig.json  pytest.ini  tst.html  tst.json
api/alembic/: env.py
api/alembic/versions/: 204350c470ac_1.py  ab674469eccc_1.py
api/docker/: .dockerignore  Dockerfile  Dockerfile.test  Dockerfile.test1  Dockerfile.test_old  docker-compose.yml
api/docker/db/: Dockerfile  copy-pg-hba.sh  init-scheme.sh
api/docker/docker/db/data/pgdata/: postmaster.pid
api/docker/rabbitmq/: .erlang.cookie
api/docker/rabbitmq/mnesia/rabbit@rabbitmq/: rabbit_durable_exchange.DCD  rabbit_durable_queue.DCD  rabbit_durable_queue.DCL  rabbit_durable_route.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
api/src/: __init__.py  constants.py  main.py
api/src/auth/: models.py  routers.py  schemas.py  services.py
api/src/common/: models.py  routers.py  schemas.py  services.py
api/src/config/: .env  core.py  database.py  models.py  rabbitmq.py  redis.py  s3.py  settings.py
api/src/core/: aio.py  dtos.py  entities.py  exceptions.py  models.py  orm.py  schemas.py  services.py  types.py  usecases.py
api/src/core/middlewares/: __init__.py  db.py  redis.py  s3.py
api/src/core/repositories/: __init__.py
api/src/core/repositories/implementations/: in_memory.py  redis.py  s3.py  sqlalchemy.py
api/src/database/: core.py  init.sql
api/src/db/sql/core/functions/: deck.sql
api/src/modules/: __init__.py
api/src/modules/auth/api/: __init__.py
api/src/modules/auth/api/public/: __init__.py
api/src/modules/auth/api/v1/: routes.py
api/src/modules/auth/application/dependencies/: __init__.py  auth.py  login.py  update_token.py
api/src/modules/auth/application/dtos/: __init__.py  telegram_login.py  update_token.py
api/src/modules/auth/application/factories/: __init__.py  login.py  update_token.py
api/src/modules/auth/application/repositories/: __init__.py  refresh_token.py  user.py
api/src/modules/auth/application/usecases/: __init__.py  telegram_login.py  (+1 more)
api/src/modules/auth/domain/: exceptions.py
api/src/modules/auth/infrastructure/: __init__.py  models.py
api/src/modules/common/api/: __init__.py
api/src/modules/common/dependencies/: __init__.py  list_interests.py
api/src/modules/deck/api/: __init__.py
api/src/modules/deck/domain/: exceptions.py
api/src/modules/deck/infrastructure/: models.py
api/src/modules/notificator/api/: __init__.py
api/src/modules/notifier/domain/: exceptions.py
api/src/modules/notifier/infrastructure/: __init__.py
api/src/modules/profile/api/: __init__.py
api/src/modules/profile/domain/: exceptions.py
api/src/modules/profile/infrastructure/: models.py
api/src/modules/profile_1/: dtos.py  exceptions.py  models.py  schemas.py  usecases.py  views.py
api/src/modules/profile_1/utils/: jwt.py
api/src/modules/tests/: empty_test.py
api/src/profile/: models.py  routers.py  schemas.py  services.py
api/src/s3/: core.py
api/src/v1/: __init__.py  exceptions.py  models.py  repositories.py  schemas.py  usecases.py
api/src/v1/auth/: dtos.py  exceptions.py  models.py  views.py
api/src/v1/auth/dependencies/: current_user.py
api/src/v1/auth/repositories/: refresh_token.py  user.py
api/src/v1/auth/schemas/: refresh_token.py  user.py
api/src/v1/auth/usecases/: refresh_token.py  user.py
api/src/v1/base/: aio.py  exceptions.py  interfaces.py  models.py  schemas.py  usecases.py
api/src/v1/base/repositories/: db.py  s3.py
api/src/v1/base/sql/: init.sql
api/src/v1/common/: dtos.py  views.py
api/src/v1/config/: .env  database.py  models.py  repositories.py  s3.py  settings.py  usecases.py
api/src/v1/deck/: bg_tasks.py  models.py  schemas.py  usecases.py  views.py
api/src/v1/deck/repositories/: db.py
api/src/v1/interest/: dtos.py  models.py  usecases.py  views.py
api/src/v1/interest/repositories/: db.py
api/src/v1/location/: models.py
api/src/v1/match/: models.py
api/src/v1/photo/: bg_tasks.py  dtos.py  exceptions.py  models.py  schemas.py  usecases.py  views.py
api/src/v1/photo/dependencies/: validate_photo.py
api/src/v1/photo/repositories/: db.py  s3.py
api/src/v1/profile/: dtos.py  exceptions.py  models.py  schemas.py  usecases.py  views.py
api/src/v1/profile/repositories/: db.py  interest.py  profile.py
api/src/v1/profile/schemas/: interest.py  profile.py
api/src/v1/profile/usecases/: interest.py  profile.py
notifier/: log_not_working.txt  log_working.txt  pyproject.toml
notifier/docker/: Dockerfile
notifier/src/: main.py  routes.py
notifier/src/config/: rabbitmq.py  redis.py  settings.py
notifier/src/modules/auth/: __init__.py  auth_user.py  exceptions.py
src/: main.py  (+2 more)
(+1485 files in other folders)
