[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Matvey <motiio.none@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
aiogram = "^3.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
sentry-sdk = {extras = ["fastapi"], version = "^1.40.3"}
aioboto3 = "^12.3.0"
pydantic-settings = "^2.1.0"
geoalchemy2 = {extras = ["shapely"], version = "^0.14.4"}
redis = {extras = ["hiredis"], version = "^5.0.1"}
geopy = "^2.4.1"
pillow = "^10.2.0"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
