[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Matvey <motiio.none@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
aiogram = "^3.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
sentry-sdk = {extras = ["opentelemetry"], version = "^1.40.4"}
aioboto3 = "^12.3.0"
pydantic-settings = "^2.1.0"
geoalchemy2 = {extras = ["shapely"], version = "^0.14.4"}
redis = {extras = ["hiredis"], version = "^5.0.1"}
geopy = "^2.4.1"
pillow = "^10.2.0"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
orjson = "^3.9.13"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"
pytest-cov = "^4.1.0"
pytest = "^8.0.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
